# CLogicSim

./: CMakeLists.txt  README.md
extra/: grid.xcf  make_and_run
src/: BaseComponent.cpp  BaseComponent.hpp  Board.cpp  Board.hpp  ComponentManager.cpp  ComponentManager.hpp  Global.cpp  Global.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
